# rust-auth

./: .gitignore  Cargo.toml  README.md  compose.yaml
.github/workflows/: ci.yaml
config/: development.yaml  testing.yaml
migrations/: 20260313131422_init.up.sql
src/: app.rs  context.rs  lib.rs
src/config/: error.rs  log.rs  mod.rs
src/controllers/: auth.rs  mod.rs
src/error/: mod.rs  response.rs
src/middlewares/: trace.rs
